adding projects to portfolio

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
       </div>
     </div>
 
-    <!-- Top -->
+    <!-- Nav -->
     <nav class="navbar navbar-v2 navbar--white">
       <div class="mr-auto logo-container">
         <a class="logo-link" href="index.html">
@@ -78,7 +78,7 @@
         </button>
       </div>
     </nav>
-    <!-- /Top -->
+    <!-- /Nav -->
 
     <!-- Slider -->
     <header class="header-fullscreen reveal">
@@ -90,12 +90,10 @@
               <div class="slider__item">
                 <div class="slider__wrap">
                   <h6 class="title title--overhead">
-                    <span class="down-up"
-                      ><span>Desktop/Mobile Website</span></span
-                    >
+                    <span class="down-up"><span>Desktop Website</span></span>
                   </h6>
                   <h1 class="title title--display-1 js-text-wave">
-                    brand experience
+                    Trouver
                   </h1>
                   <p class="description">
                     <span class="down-up"
@@ -109,7 +107,7 @@
                   </p>
                   <a
                     class="btn-link btn-link--circle-right"
-                    href="projects/brand.html"
+                    href="projects/Trouver.html"
                     ><span class="down-up"
                       ><span
                         >See details<i
@@ -126,23 +124,22 @@
               <div class="slider__item">
                 <div class="slider__wrap">
                   <h6 class="title title--overhead">
-                    <span class="down-up"><span>Mobile Application</span></span>
+                    <span class="down-up"><span>Web Application</span></span>
                   </h6>
                   <h1 class="title title--display-1 js-text-wave">
-                    smart assistant
+                    Rost
                   </h1>
                   <p class="description">
                     <span class="down-up"
                       ><span
-                        >An advanced digital banker focused on assisting clients
-                        with everyday financial transactions and
-                        decisions.</span
+                        >Simplifying finance information for the novice stock
+                        broker.</span
                       ></span
                     >
                   </p>
                   <a
                     class="btn-link btn-link--circle-right"
-                    href="projects/smart-assistant.html"
+                    href="projects/rost.html"
                     ><span class="down-up"
                       ><span
                         >See details<i
@@ -155,7 +152,7 @@
             <!-- /Caption 2 -->
 
             <!-- Caption 3 -->
-            <div class="swiper-slide">
+            <!-- <div class="swiper-slide">
               <div class="slider__item">
                 <div class="slider__wrap">
                   <h6 class="title title--overhead">
@@ -184,7 +181,7 @@
                   ></a>
                 </div>
               </div>
-            </div>
+            </div> -->
             <!-- /Caption 3 -->
           </div>
         </div>
@@ -204,18 +201,18 @@
             <div class="swiper-slide">
               <div
                 class="cover-slider"
-                data-bg="assets/img/fullscreen_slider_02.jpg"
+                data-bg="assets/img/image_sa_03.jpg"
               ></div>
             </div>
             <!-- /Image 2 -->
 
             <!-- Image 3 -->
-            <div class="swiper-slide">
+            <!-- <div class="swiper-slide">
               <div
                 class="cover-slider"
                 data-bg="assets/img/fullscreen_slider_02.jpg"
               ></div>
-            </div>
+            </div> -->
             <!-- /Image 3 -->
           </div>
         </div>
