--- a/projects.html
+++ b/projects.html
@@ -61,7 +61,7 @@
       </div>
     </div>
 
-    <!-- Top -->
+    <!-- Nav -->
     <nav class="navbar">
       <div class="mr-auto logo-container">
         <a class="logo-link" href="index.html">
@@ -83,12 +83,14 @@
         </button>
       </div>
     </nav>
-    <!-- /Top -->
+    <!-- /Nav -->
 
-    <!-- News -->
+    <!-- Page -->
     <div class="flex-conteiner-fluid mw">
       <header class="header-page">
         <h1 class="title title--h1 js-lines-l">Projects.</h1>
+
+        <!-- Filter -->
         <div class="select js-down">
           <span class="placeholder">Select category</span>
           <ul class="filters">
@@ -116,12 +118,13 @@
           </ul>
           <input type="hidden" name="changemetoo" />
         </div>
+        <!-- /Filter -->
       </header>
 
       <div class="grid-news fitGrid">
         <div class="gutter-sizer gutter-sizer--3"></div>
-        <!-- Post -->
-        <article class="item-news item-news--tree triger-hl category-UX">
+        <!-- Project 1 -->
+        <!-- <article class="item-news item-news--tree triger-hl category-UX">
           <figure class="item-news__media js-block">
             <img
               class="item-news__image"
@@ -140,11 +143,11 @@
               >
             </h2>
           </div>
-        </article>
-        <!-- /Post -->
+        </article> -->
+        <!-- /Project 1 -->
 
-        <!-- Post -->
-        <article
+        <!-- Project 2 -->
+        <!-- <article
           class="item-news item-news--tree triger-hl category-visualDesign"
         >
           <figure class="item-news__media js-block">
@@ -165,11 +168,11 @@
               >
             </h2>
           </div>
-        </article>
-        <!-- /Post -->
+        </article> -->
+        <!-- /Project 2 -->
 
-        <!-- Post -->
-        <article class="item-news item-news--tree triger-hl category-html">
+        <!-- Project 3 -->
+        <!-- <article class="item-news item-news--tree triger-hl category-html">
           <figure class="item-news__media js-block">
             <img
               class="item-news__image"
@@ -188,11 +191,11 @@
               >
             </h2>
           </div>
-        </article>
-        <!-- /Post -->
+        </article> -->
+        <!-- /Project 3 -->
 
-        <!-- Post
-        <article class="item-news item-news--tree triger-hl category-html">
+        <!-- Project 4 -->
+        <!-- <article class="item-news item-news--tree triger-hl category-html">
           <figure class="item-news__media js-block">
             <img
               class="item-news__image"
@@ -211,10 +214,10 @@
               >
             </h2>
           </div>
-        </article>
-        /Post -->
+        </article> -->
+        <!-- /Project 4-->
 
-        <!-- Post -->
+        <!-- Project 5 -->
         <article class="item-news item-news--tree triger-hl category-html">
           <figure class="item-news__media js-block">
             <img
@@ -235,9 +238,9 @@
             </h2>
           </div>
         </article>
-        <!-- /Post -->
+        <!-- /Project 5 -->
 
-        <!-- Post -->
+        <!-- Project 6 -->
         <article class="item-news item-news--tree triger-hl category-UX">
           <figure class="item-news__media js-block">
             <img
@@ -259,10 +262,10 @@
             </h2>
           </div>
         </article>
-        <!-- /Post -->
+        <!-- /Project 6 -->
 
-        <!-- Post
-        <article class="item-news item-news--tree triger-hl category-UX">
+        <!-- Project 7 -->
+        <!-- <article class="item-news item-news--tree triger-hl category-UX">
           <figure class="item-news__media js-block">
             <img
               class="item-news__image"
@@ -281,10 +284,10 @@
               >
             </h2>
           </div>
-        </article>
-        /Post -->
+        </article> -->
+        <!-- /Project 7 -->
 
-        <!-- Post -->
+        <!-- Project 8 -->
         <article class="item-news item-news--tree triger-hl category-UX">
           <figure class="item-news__media js-block">
             <img
@@ -305,10 +308,10 @@
             </h2>
           </div>
         </article>
-        <!-- /Post -->
+        <!-- /Project 8 -->
 
-        <!-- Post -->
-        <article
+        <!-- Project 9 -->
+        <!-- <article
           class="item-news item-news--tree triger-hl category-UX category-visualDesign category-Research"
         >
           <figure class="item-news__media js-block">
@@ -329,11 +332,11 @@
               >
             </h2>
           </div>
-        </article>
-        <!-- /Post -->
+        </article> -->
+        <!-- /Project 9 -->
 
-        <!-- Post -->
-        <article
+        <!-- Project 10 -->
+        <!-- <article
           class="item-news item-news--tree triger-hl category-visualDesign category-Research category-UX"
         >
           <figure class="item-news__media js-block">
@@ -354,11 +357,11 @@
               >
             </h2>
           </div>
-        </article>
-        <!-- /Post -->
+        </article> -->
+        <!-- /Project 10 -->
 
-        <!-- Post -->
-        <article
+        <!-- Project 11 -->
+        <!-- <article
           class="item-news item-news--tree triger-hl category-UX category-Research"
         >
           <figure class="item-news__media js-block">
@@ -379,11 +382,79 @@
               >
             </h2>
           </div>
+        </article> -->
+        <!-- /Project 11 -->
+        
+        <!-- Burgers -->
+        <article class="item-news item-news--tree triger-hl category-UX">
+            <figure class="item-news__media js-block">
+              <img
+                class="item-news__image"
+                src="./assets/img/image_ts_01.jpg"
+                alt="News"
+              />
+            </figure>
+            <div class="item-news__header js-block">
+              <div class="date">All we do is burger!!</div>
+              <h2 class="title title--h5 item-news__title">
+                <a href="./projects/train-scheduler.html"
+                  ><span class="hover-line"
+                    >Devour one of the burgers that are ready to eat, or order a custom burger.</span
+                  ></a
+                >
+              </h2>
+            </div>
+          </article>
+          <!-- /Burgers -->
+
+        <!-- Rost -->
+        <article class="item-news item-news--tree triger-hl category-UX">
+          <figure class="item-news__media js-block">
+            <img
+              class="item-news__image"
+              src="./assets/img/image_ts_01.jpg"
+              alt="News"
+            />
+          </figure>
+          <div class="item-news__header js-block">
+            <div class="date">Rost</div>
+            <h2 class="title title--h5 item-news__title">
+              <a href="./projects/rost.html"
+                ><span class="hover-line"
+                  >Add a train to the schedule to see what time the next train
+                  arrives and how many minutes away the train is.</span
+                ></a
+              >
+            </h2>
+          </div>
         </article>
-        <!-- /Post -->
+        <!-- /Rost -->
+
+        <!-- Trouver -->
+        <article class="item-news item-news--tree triger-hl category-UX">
+          <figure class="item-news__media js-block">
+            <img
+              class="item-news__image"
+              src="./assets/img/image_ts_01.jpg"
+              alt="News"
+            />
+          </figure>
+          <div class="item-news__header js-block">
+            <div class="date">Trouver</div>
+            <h2 class="title title--h5 item-news__title">
+              <a href="./projects/trouver.html"
+                ><span class="hover-line"
+                  >Add a train to the schedule to see what time the next train
+                  arrives and how many minutes away the train is.</span
+                ></a
+              >
+            </h2>
+          </div>
+        </article>
+        <!-- /Trouver -->
       </div>
     </div>
-    <!-- /News -->
+    <!-- /Page -->
 
     <!-- Footer -->
     <footer class="footer">
