--- a/index.html
+++ b/index.html
@@ -98,11 +98,9 @@
                   <p class="description">
                     <span class="down-up"
                       ><span
-                        >Home to all of BBVA’s brand assets and marketing
-                        campaigns, Brand Experience contains dowloads to all
-                        assets and templates. It is available to internal
-                        employees as well as approved external vendors.</span
-                      ></span
+                        >Discover the best places to watch your favorite
+                        content.
+                      </span></span
                     >
                   </p>
                   <a
@@ -190,19 +188,13 @@
           <div class="swiper-wrapper">
             <!-- Image 1 -->
             <div class="swiper-slide">
-              <div
-                class="cover-slider"
-                data-bg="assets/img/fullscreen_slider_02.jpg"
-              ></div>
+              <div class="cover-slider" data-bg="assets/img/trouver.png"></div>
             </div>
             <!-- /Image 1 -->
 
             <!-- Image 2 -->
             <div class="swiper-slide">
-              <div
-                class="cover-slider"
-                data-bg="assets/img/image_sa_03.jpg"
-              ></div>
+              <div class="cover-slider" data-bg="assets/img/rost.png"></div>
             </div>
             <!-- /Image 2 -->
 
