--- a/projects.html
+++ b/projects.html
@@ -384,36 +384,37 @@
           </div>
         </article> -->
         <!-- /Project 11 -->
-        
+
         <!-- Burgers -->
         <article class="item-news item-news--tree triger-hl category-UX">
-            <figure class="item-news__media js-block">
-              <img
-                class="item-news__image"
-                src="./assets/img/image_ts_01.jpg"
-                alt="News"
-              />
-            </figure>
-            <div class="item-news__header js-block">
-              <div class="date">All we do is burger!!</div>
-              <h2 class="title title--h5 item-news__title">
-                <a href="./projects/train-scheduler.html"
-                  ><span class="hover-line"
-                    >Devour one of the burgers that are ready to eat, or order a custom burger.</span
-                  ></a
-                >
-              </h2>
-            </div>
-          </article>
-          <!-- /Burgers -->
+          <figure class="item-news__media js-block">
+            <img
+              class="item-news__image"
+              src="./assets/img/burger.png"
+              alt="Burgers"
+            />
+          </figure>
+          <div class="item-news__header js-block">
+            <div class="date">All we do is burger!!</div>
+            <h2 class="title title--h5 item-news__title">
+              <a href="./projects/burgers.html"
+                ><span class="hover-line"
+                  >Devour one of the burgers that are ready to eat, or order a
+                  custom burger.</span
+                ></a
+              >
+            </h2>
+          </div>
+        </article>
+        <!-- /Burgers -->
 
         <!-- Rost -->
         <article class="item-news item-news--tree triger-hl category-UX">
           <figure class="item-news__media js-block">
             <img
               class="item-news__image"
-              src="./assets/img/image_ts_01.jpg"
-              alt="News"
+              src="./assets/img/Rost.png"
+              alt="Rost"
             />
           </figure>
           <div class="item-news__header js-block">
@@ -421,8 +422,8 @@
             <h2 class="title title--h5 item-news__title">
               <a href="./projects/rost.html"
                 ><span class="hover-line"
-                  >Add a train to the schedule to see what time the next train
-                  arrives and how many minutes away the train is.</span
+                  >Simplifying finance information for the novice stock
+                  broker.</span
                 ></a
               >
             </h2>
@@ -435,8 +436,8 @@
           <figure class="item-news__media js-block">
             <img
               class="item-news__image"
-              src="./assets/img/image_ts_01.jpg"
-              alt="News"
+              src="./assets/img/trouver.png"
+              alt="Trouver"
             />
           </figure>
           <div class="item-news__header js-block">
@@ -444,9 +445,8 @@
             <h2 class="title title--h5 item-news__title">
               <a href="./projects/trouver.html"
                 ><span class="hover-line"
-                  >Add a train to the schedule to see what time the next train
-                  arrives and how many minutes away the train is.</span
-                ></a
+                  >Discover the best places to watch your favorite content.
+                </span></a
               >
             </h2>
           </div>
