--- a/projects/burgers.html
+++ b/projects/burgers.html
@@ -62,7 +62,7 @@
           Website
         </h6>
         <h1 class="title title--display-1 js-words">
-          Train Scheduler
+          All we do is burgers!!
         </h1>
         <!-- /Title -->
       </div>
