--- a/projects/rost.html
+++ b/projects/rost.html
@@ -122,29 +122,9 @@
       </div>
     </article>
 
-    <article class="caption-single container">
-        <div class="row">
-          <div class="col-12 col-lg-2">
-            <span class="num-article">FEATURES —</span>
-          </div>
-          <div class="col-12 col-lg-9">
-            <h2 class="title title--h4 js-lines">
-              Simplifying finance information for the novice stock broker.
-            </h2>
-            <div class="description js-block">
-              <p>
-                  With so much information available, diving into the world of stocks and finance can seem overwhelming. 
-                  While there are many great apps and websites out there, they include terms and details that can be confusing for anyone with no experience in the stock & finance world.
-                  The ROST app  filters out all excess material and provides key data that helps the user decide whether to sell, buy or hold.                
-              </p>
-            </div>
-          </div>
-        </div>
-      </article>
-
     <!-- Image -->
     <figure class="image-container image-container--gutters reveal">
-      <img class="cover" src="../assets/img/image_ts_02.png" alt="" />
+      <img class="cover" src="../assets/img/rost.png" alt="" />
     </figure>
     <!-- /Image -->
 
