--- a/projects/trouver.html
+++ b/projects/trouver.html
@@ -59,10 +59,10 @@
       <div class="container">
         <!-- Title -->
         <h6 class="title title--overhead title--tail">
-          Website
+          Web App
         </h6>
         <h1 class="title title--display-1 js-words">
-          Train Scheduler
+          Trouver
         </h1>
         <!-- /Title -->
       </div>
@@ -78,24 +78,24 @@
         />
       </figure> -->
     <!-- /Image -->
-
+   
     <div class="container">
       <!-- Details -->
       <div class="case-details">
         <div class="item-details">
           <span class="item-details__title title--overhead">Date</span>
-          <span class="item-details__text">Nov 2019</span>
+          <span class="item-details__text">Jan 2019</span>
         </div>
         <div class="item-details">
           <span class="item-details__title title--overhead">Technologies Used</span>
-          <span class="item-details__text">HTML/CSS, Bootstrap, Javascript, jQuery, Firebase, Moment.js</span>
+          <span class="item-details__text">HTML/CSS, Bootstrap, Javascript, jQuery, Sequelize, Express</span>
         </div>
         <div class="item-details">
           <span target="_blank" class="item-details__title title--overhead">View Code</span>
-          <a href="https://github.com/Ogonnaya/train-scheduler"><span class="item-details__text">Github</span></a>
+          <a href="https://github.com/Ogonnaya/P2-Heroku"><span class="item-details__text">Github</span></a>
         </div>
         <div class="item-details item-details--end">
-          <a target="_blank" class="btn-link" href="https://ogonnaya.github.io/train-scheduler/">See Website<i
+          <a target="_blank" class="btn-link" href="https://ogonnaya.github.io/rost/">See Website<i
               class="circle circle--right icon-right-open"></i></a>
         </div>
       </div>
@@ -109,12 +109,11 @@
         </div>
         <div class="col-12 col-lg-9">
           <h2 class="title title--h4 js-lines">
-            Add a train to the schedule to see what time the next train arrives and how many minutes away the train is.
+            Discover the best places to watch your favorite content.
           </h2>
           <div class="description js-block">
             <p>
-              This website will provides up-to-date information about various trains, namely their arrival times and how
-              many minutes remain until they arrive at their station.
+                Trouver App is a simple web application which fixes the problem of locating the available streaming services for a given piece of media (either movie or television). It allows the user to avoid having to juggle between numerous services to find the content they wish to view.
             </p>
           </div>
         </div>
@@ -123,7 +122,7 @@
 
     <!-- Image -->
     <figure class="image-container image-container--gutters reveal">
-      <img class="cover" src="../assets/img/image_ts_02.png" alt="" />
+      <img class="cover" src="../assets/img/trouver.png" alt="" />
     </figure>
     <!-- /Image -->
 
